# PicrossPuzzleExporter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindGecode.cmake
src/data/: Picross.cpp  Picross.hpp  PicrossBW.cpp  PicrossBW.hpp  PicrossColorHints.cpp  PicrossColorHints.hpp  PicrossFactory.cpp  PicrossFactory.hpp  PicrossGray.cpp  PicrossGray.hpp  PicrossLayer.cpp  PicrossLayer.hpp  PicrossRBY.cpp  PicrossRBY.hpp  PicrossRGB.cpp  PicrossRGB.hpp  PicrossValidator.cpp  PicrossValidator.hpp
src/exporters/: ExportParams.hpp  ProtoExporter.cpp  ProtoExporter.hpp  XlsxExporter.cpp  XlsxExporter.hpp
src/gui/: PicrossApp.cpp  PicrossApp.hpp  PicrossDataCanvas.cpp  PicrossDataCanvas.hpp  PicrossFrame.cpp  PicrossFrame.hpp  QRCodeDialog.cpp  QRCodeDialog.hpp  QRCodePanel.cpp  QRCodePanel.hpp
src/util/: cdecode.c  cencode.c  color.cpp  color.hpp  dither.cpp  encode.h  histogram.cpp  mediancut.cpp  mediancut.hpp  reductionhelper.cpp  reductionhelper.hpp
